Fix staff picks z-index

--- a/assets/styles/staffpicks.less
+++ b/assets/styles/staffpicks.less
@@ -80,7 +80,7 @@
   }
   .staff-picks-content {
     position: absolute;
-    z-index: 3499;
+    z-index: 3000;
   }
   .staff-picks-overlay {
     background-color: @white;
